# lib-man-sys

./: CMakeLists.txt  README.md
include/: book.h  console_ui.h  library_manager.h
src/: book.cpp  console_ui.cpp  library_manager.cpp  main.cpp
tests/: book_test.cpp  library_manager_test.cpp  sample_test.cpp
